--- a/gobarber_backend/package.json
+++ b/gobarber_backend/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@types/express": "^4.17.7",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.0.1",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.16.1",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "2.21.2",
@@ -24,6 +25,7 @@
     "uuidv4": "^6.2.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "eslint": "6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.3.0",
