--- a/gobarber_frontend/.eslintrc.json
+++ b/gobarber_frontend/.eslintrc.json
@@ -9,7 +9,6 @@
         "plugin:@typescript-eslint/recommended",
         "prettier/@typescript-eslint",
         "plugin:prettier/recommended"
-
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -31,6 +30,8 @@
       "react-hooks/exhaustive-deps": "warn",
       "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
       "import/prefer-default-export": "off",
+      "react/prop-types": "off",
+      "react/jsx-props-no-spreading": "off",
       "camelcase": "off",
       "@typescript-eslint/ban-types": "off",
       "import/extensions": [
