--- a/gobarber_backend/package.json
+++ b/gobarber_backend/package.json
@@ -15,6 +15,7 @@
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.0.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "2.21.2",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.8",
     "@types/multer": "^1.4.4",
     "eslint": "6.8.0",
     "eslint-config-prettier": "^6.11.0",
