--- a/gobarber_backend/.eslintrc.json
+++ b/gobarber_backend/.eslintrc.json
@@ -32,6 +32,14 @@
         "prettier/prettier":"error",
         "class-methods-use-this":"off",
         "camelcase": "off",
+        "@typescript-eslint/naming-convention": [
+            "error",
+            {
+              "selector": "interface",
+              "prefix": ["I"],
+              "format": ["PascalCase"]
+            }
+          ],
         "@typescript-eslint/no-unused-vars": ["error", {
             "argsIgnorePattern": "_"
         }]
