--- a/gobarber_backend/.eslintrc.json
+++ b/gobarber_backend/.eslintrc.json
@@ -31,6 +31,7 @@
         ],
         "prettier/prettier":"error",
         "class-methods-use-this":"off",
+        "no-useless-constructor": "off",
         "camelcase": "off",
         "@typescript-eslint/naming-convention": [
             "error",
