--- a/gobarber_backend/ormconfig.json
+++ b/gobarber_backend/ormconfig.json
@@ -4,9 +4,9 @@
     "port": 5432,
     "username": "postgres",
     "password": "docede123",
-    "database": "gostack_gobarber",
+    "database": "gobarber",
     "migrations": [
-        "./src/shared/infra/typeorm/entities/*.ts"
+        "./src/shared/infra/typeorm/migrations/*.ts"
     ],
     "entities": [
         "./src/modules/**/infra/typeorm/entities/*.ts"
