--- a/gobarber_backend/package.json
+++ b/gobarber_backend/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.19",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.0.1",
     "bcryptjs": "^2.4.3",
@@ -23,8 +24,10 @@
     "eslint-plugin-import": "2.22.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.17",
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
