--- a/gobarber_backend/package.json
+++ b/gobarber_backend/package.json
@@ -26,6 +26,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.3",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
     "pg": "^8.3.3",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.8",
+    "@types/mongodb": "^3.6.3",
     "@types/multer": "^1.4.4",
     "eslint": "6.8.0",
     "eslint-config-prettier": "^6.11.0",
