--- a/gobarber_backend/tsconfig.json
+++ b/gobarber_backend/tsconfig.json
@@ -3,6 +3,7 @@
 
     "target": "es5",
     "module": "commonjs",
+    "allowJs": true,
      "outDir": "./dist",
      "rootDir": "./src",
      "strictPropertyInitialization": false,
