--- a/gobarber_frontend/.eslintrc.json
+++ b/gobarber_frontend/.eslintrc.json
@@ -32,6 +32,7 @@
       "import/prefer-default-export": "off",
       "react/prop-types": "off",
       "react/jsx-props-no-spreading": "off",
+      "import/no-duplicates": "off",
       "camelcase": "off",
       "@typescript-eslint/ban-types": "off",
       "import/extensions": [
