--- a/gobarber_backend/package.json
+++ b/gobarber_backend/package.json
@@ -17,6 +17,7 @@
     "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.0.1",
+    "aws-sdk": "^2.877.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.4",
     "class-transformer": "^0.3.1",
