--- a/gobarber_backend/package.json
+++ b/gobarber_backend/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
+    "ioredis": "^4.25.0",
     "jsonwebtoken": "^8.5.1",
     "mime": "^2.5.2",
     "mongodb": "^3.6.3",
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.8",
+    "@types/ioredis": "^4.22.2",
     "@types/mongodb": "^3.6.3",
     "@types/multer": "^1.4.4",
     "eslint": "6.8.0",
